# djangocrm

./: .gitignore  pyproject.toml
app/authenticate/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
app/authenticate/migrations/: 0001_initial.py  0002_alter_user_options.py  0003_user_company_user_is_company_owner.py
app/companies/: admin.py  models.py  serializers.py  urls.py  views.py
app/companies/migrations/: 0001_initial.py
app/core/: schema_extensions.py  settings.py  urls.py
app/storage/: admin.py  models.py  serializers.py  urls.py  views.py
app/storage/migrations/: 0001_initial.py
